--- a/RayTracerApp/RayTracerApp.csproj
+++ b/RayTracerApp/RayTracerApp.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\RayTracer\RayTracer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="YamlDotNet" Version="11.1.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
