--- a/Yaml/Metal.yml
+++ b/Yaml/Metal.yml
@@ -8,6 +8,12 @@
 # ======================================================
 
 # ======================================================
+# output filename
+# ======================================================
+
+- file: Images\Metal_YAML2.ppm
+
+# ======================================================
 # the camera
 # ======================================================
 
@@ -35,7 +41,7 @@
 - add: plane
   material:
     pattern:
-      type: checkers
+      type: checker
       colors:
         - [ 0.7, 0.7, 0.7 ]
         - [ 0.3, 0.3, 0.3 ]
