Added shape and tuple cloning

--- a/Yaml/BVH.yml
+++ b/Yaml/BVH.yml
@@ -10,6 +10,12 @@
 # ======================================================
 
 # ======================================================
+# output filename
+# ======================================================
+
+- file: Images\BVH_YAML2.ppm
+
+# ======================================================
 # the camera
 # ======================================================
 
