--- a/Yaml/Chapter14_groups.yml
+++ b/Yaml/Chapter14_groups.yml
@@ -8,6 +8,10 @@
 # definitions
 # ======================================================
 
+- define: cylinder-scaling
+  value:
+    - [ scale, 0.25, 1, 0.25 ]
+
 - define: hex-side
   value:
     add: group
@@ -18,21 +22,17 @@
           - [translate, 0, 0, -1]
         material:
           color: [ 1, 1, 1 ]
-          diffuse: 0.7
-          specular: 0.3
       - add: cylinder
         minimum: 0
         maximum: 1
         closed: false
         transform:
+          - cylinder-scaling
           - [rotate-z, -1.5708]
           - [rotate-y, -0.5236]
-          - [scale, 0.25, 1, 0.25]
           - [translate, 0, 0, -1]
         material:
           color: [ 1, 1, 1 ]
-          diffuse: 0.7
-          specular: 0.3
 
 - define: hexagon
   value:
@@ -61,11 +61,12 @@
 
 - add: camera
   width: 1000
-  height: 500
+  height: 600
   field-of-view: 1.047
-  from: [0, 1.5, -5]
-  to: [0, 1, 0]
+  from: [0, 2.5, -5]
+  to: [0, 0, 0]
   up: [0, 1, 0]
+  show-progress: true
 
 # ======================================================
 # the light
